using Godot;

public partial class WolfEnemy : Node2D
{
    // Placeholder for simple enemy AI
}
